Add get single result
